ajustes na imagem de fundo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <section class="container">
+    <img src="./assets/clock.jpg" alt="default"/>
     <div class="mask">
       <div class="items">
         <h1 class="time" id="time"></h1>
